<resources>
    <string name="app_name">TaskMaster</string>
    <string name="hello_heba">Hello Heba</string>
    <string name="my_tasks">My Tasks</string>
    <string name="add_task">ADD TASK</string>
    <string name="all_tasks">ALL TASKS</string>
    <string name="task_title">Task title</string>
    <string name="add_task1">Add Task</string>
    <string name="task_description">Task Description</string>
    <string name="total_tasks_0">Total tasks: 0</string>
    <string name="home">Home</string>
    <string name="all_tasks1">All Tasks</string>
    <string name="do_something">Do something</string>
    <string name="task_master">Task Master</string>
    <string name="my_task">My task</string>
    <string name="settings">Settings</string>
    <string name="task1">Task1</string>
    <string name="task2">task2</string>
    <string name="task3">task3</string>
    <string name="hard_work_makes_us_strong_as_a_person_when_you_seriously_hard_work_for_prosperity_you_automatically_get_prepared_for_the_worst_there_will_always_be_odds_in_life_but_an_honest_journey_for_success_is_invaluable_because_it_helps_us_live_a_life_as_a_strong_and_independent_person">Hard work makes us strong as a person. When you seriously hard work for prosperity, you automatically get prepared for the worst. There will always be odds in life. But, an honest journey for success is invaluable, because it helps us live a life as a strong and independent person.</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="save">Save</string>
    <string name="go_to_home_page">Go to home page</string>
    <string name="username_s_tasks">{username}’s tasks</string>
    <string name="task_title1">Task Title</string>
    <string name="username">username</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="body">Body</string>
    <string name="state">State</string>
    <string name="title">Title</string>
    <string name="name">Name</string>
    <string name="add_tasks">Add tasks</string>
    <string name="all_tasks11">All tasks</string>
    <string name="settings1">Settings</string>
    <string name="heba_s_tasks">Heba\'s tasks</string>
    <string name="channel_name">task1</string>
    <string name="channel_description">task2</string>
</resources>