<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:context=".FragmentPart">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/fragment_task"
        android:layout_width="405dp"
        android:layout_height="50dp">


        <TextView
            android:id="@+id/titleFragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.105"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.483" />

        <TextView
            android:id="@+id/bodyFragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/body"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.284"
            app:layout_constraintStart_toEndOf="@+id/titleFragment"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.516" />

        <TextView
            android:id="@+id/stateFragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/state"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.44"
            app:layout_constraintStart_toEndOf="@+id/bodyFragment"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.516" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>